--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,68 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    ext {
+        //App dependencies
+        kotlinVersion = "1.6.0"
+        recyclerViewVersion = "1.2.1"
+        coreKtxVersion = "1.7.0"
+        activityVersion = "1.4.0"
+        timberVersion = "5.0.1"
+        googleServicesVersion = '4.3.10'
+        appCompatVersion = '1.4.1'
+        constraintLayoutVersion = '2.1.3'
+        coreTestingVersion = '2.0.0'
+        coroutinesVersion = "1.6.0"
+        espressoVersion = '3.1.1'
+        fragmentVersion = '1.4.1'
+        glideVersion = '4.11.0'
+        gradleVersion = '4.1.2'
+        gsonVersion = '2.9.0'
+        hiltVersion = '2.38.1'
+        junitVersion = '4.12'
+        kotlinVersion = '1.4.30'
+        ktlintVersion = '0.38.1'
+        ktxVersion = '1.7.0'
+        lifecycleVersion = '2.4.1'
+        materialVersion = '1.6.0'
+        navigationVersion = '2.4.2'
+        navigationSafeArgsVersion = '2.4.2'
+        okhttpVersion = '4.9.0'
+        retrofitVersion = '2.9.0'
+        retrofitMoshiVersion = '2.6.2'
+        kotlinGradlePluginVersion = '1.6.21'
+        toolsBuildGradleVersion = '7.0.4'
+        sqliteJdbcVersion = '3.34.0'
+        koinVersion = '3.2.0'
+    }
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:$toolsBuildGradleVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinGradlePluginVersion"
+        //Safe args dependencies
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationSafeArgsVersion"
+
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.1.3' apply false
     id 'com.android.library' version '7.1.3' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+}
+
+allprojects {
+    repositories {
+        google()
+    }
+    configurations.all {
+        resolutionStrategy {
+            force "org.xerial:sqlite-jdbc:$sqliteJdbcVersion"
+        }
+    }
 }
 
 task clean(type: Delete) {
